# my_mcp

./: .env.example  .gitignore  MCP-HandsOn-KOR.ipynb  README.md  app_KOR.py  config.json  config.py  connectionNAS.py  example_config.json  mcp_server_multidoc.py  mcp_server_pdf.py  mcp_server_ppt.py  mcp_server_qdrant.py  mcp_server_rag.py  pyproject.toml  test.py  utils.py  공부중.txt  사용법.txt
dockers/: .env.example
rag/: Qdrant_test.py  __init__.py  base.py  mutilDoc.py  pdf.py  ppt.py
