[project]
name = "langgraph-mcp-agents"
version = "0.1.0"
description = "LangGraph Agent with MCP Adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nest-asyncio>=1.6.0",
    "faiss-cpu>=1.10.0",
    "jupyter>=1.1.1",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "mcp[cli]>=1.6.0",
    "notebook>=7.3.3",
    "pymupdf>=1.25.4",
    "python-dotenv>=1.1.0",
    "langchain>=0.3.21",
    "config>=0.5.1",
    "langchain-chroma>=0.2.2",
    "streamlit>=1.44.1",
    "pypdf>=5.4.0",
    "pdfplumber>=0.11.6",
    "dotenv>=0.9.9",
    "rank-bm25>=0.2.2",
    "unstructured>=0.17.2",
    "python-pptx>=1.0.2",
    "langchain-google-genai>=2.1.3",
    "smbprotocol>=1.15.0",
    "docx>=0.2.4",
    "httpx>=0.28.1",
]
